@@ -7,6 +7,7 @@ Version 1.0.8 To be released
 - New: CDbCommand::bindParam() and bindValue() now return the command object so that they can be used in a chainable fashion (Qiang)
 - New: Added thead and tbody to the code generated by crud command (Qiang)
 - New: Added CFormModel::init() and CActiveRecord::init() (Qiang)
+- Chg: Modified the count() method of relational AR to support counting composite keys (Qiang)
 
 Version 1.0.7 July 5, 2009
 --------------------------
